--- a/gallery.html
+++ b/gallery.html
@@ -112,22 +112,22 @@
                                         <div class="gdlr-core-gallery-item-holder gdlr-core-js-2 clearfix" data-layout="fitrows">
                                             <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15 gdlr-core-column-first">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_123383902.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/apply.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/apply.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/apply.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_111027356.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/apply2.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/apply2.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/apply2.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_787201486.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/gallery1.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/gallery1.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/gallery1.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-item-list gdlr-core-gallery-column  gdlr-core-column-15">
                                                 <div class="gdlr-core-gallery-list gdlr-core-media-image">
-                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/shutterstock_331524281.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/gallery4.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
+                                                    <a class="gdlr-core-lightgallery gdlr-core-js " href="upload/gallery4.jpg" data-lightbox-group="gdlr-core-img-group-2"><img src="upload/gallery4.jpg" width="700" height="660" alt="" /><span class="gdlr-core-image-overlay "><i class="gdlr-core-image-overlay-icon gdlr-core-size-22 fa fa-search"  ></i></span></a>
                                                 </div>
                                             </div>
                                         </div>
