--- a/gallery.html
+++ b/gallery.html
@@ -23,16 +23,16 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="index"><img src="images/logo.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
                     <div class="kingster-mobile-menu"><a class="kingster-mm-menu-button kingster-mobile-menu-button kingster-mobile-button-hamburger" href="#kingster-mobile-menu"><span></span></a>
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
-                                <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="about.html">About</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="gallery.html">Gallery</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="index">Home</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="about">About</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="gallery">Gallery</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Teachers Login</a></li>
@@ -66,19 +66,19 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="index"><img src="images/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
-                                    <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="about.html">About Us</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="gallery.html">Gallery</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="index">Home</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="about">About Us</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="gallery">Gallery</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Teachers Login</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="contact">Contact</a></li>
 
                                 </ul>
                                 <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
@@ -214,10 +214,10 @@
                                 <h3 class="kingster-widget-title">Navigations</h3><span class="clear"></span>
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="#">Home</a></li>
-                                        <li class="menu-item"><a href="about.html">About us</a></li>
-                                        <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                                        <li class="menu-item"><a href="gallery.html">Our gallery</a></li>
+                                        <li class="menu-item"><a href="index">Home</a></li>
+                                        <li class="menu-item"><a href="about">About us</a></li>
+                                        <li class="menu-item"><a href="contact">Contact Us</a></li>
+                                        <li class="menu-item"><a href="gallery">Our gallery</a></li>
 
                                     </ul>
                                 </div>
@@ -229,10 +229,10 @@
                                 <h3 class="kingster-widget-title">Navigations</h3><span class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="about.html">Our Mission</a></li>
-                                        <li class="menu-item"><a href="about.html">Our value</a></li>
-                                        <li class="menu-item"><a href="about.html">Our Vision</a></li>
-                                        <li class="menu-item"><a href="about.html">Director’s Welcome</a></li>
+                                        <li class="menu-item"><a href="about">Our Mission</a></li>
+                                        <li class="menu-item"><a href="about">Our value</a></li>
+                                        <li class="menu-item"><a href="about">Our Vision</a></li>
+                                        <li class="menu-item"><a href="about">Director’s Welcome</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -293,7 +293,7 @@
     <script type='text/javascript' src='js/jquery/ui/effect.min.js'></script>
     <script type='text/javascript'>
         var kingster_script_core = {
-            "home_url": "index.html"
+            "home_url": "index"
         };
     </script>
     <script type='text/javascript' src='js/plugins.min.js'></script>
