--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="kingster-mobile-header-container kingster-container clearfix">
                 <div class="kingster-logo  kingster-item-pdlr">
                     <div class="kingster-logo-inner">
-                        <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                        <a class="" href="index"><img src="images/logo.png" alt="" /></a>
                     </div>
                 </div>
                 <div class="kingster-mobile-menu-right">
@@ -30,8 +30,8 @@
                         <div class="kingster-mm-menu-wrap kingster-navigation-font" id="kingster-mobile-menu" data-slide="right">
                             <ul id="menu-main-navigation" class="m-menu">
                                 <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="about.html">About</a></li>
-                                <li class="menu-item kingster-normal-menu"><a href="gallery.html">Gallery</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="about">About</a></li>
+                                <li class="menu-item kingster-normal-menu"><a href="gallery">Gallery</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
                                 <li class="menu-item kingster-normal-menu"><a href="#">Teachers Login</a></li>
@@ -65,19 +65,19 @@
                     <div class="kingster-header-container-inner clearfix">
                         <div class="kingster-logo  kingster-item-pdlr">
                             <div class="kingster-logo-inner">
-                                <a class="" href="index.html"><img src="images/logo.png" alt="" /></a>
+                                <a class="" href="index"><img src="images/logo.png" alt="" /></a>
                             </div>
                         </div>
                         <div class="kingster-navigation kingster-item-pdlr clearfix ">
                             <div class="kingster-main-menu" id="kingster-main-menu">
                                 <ul id="menu-main-navigation-1" class="sf-menu">
                                     <li class="menu-item kingster-normal-menu"><a href="#">Home</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="about.html">About Us</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="gallery.html">Gallery</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="about">About Us</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="gallery">Gallery</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Announcement</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Online Result</a></li>
                                     <li class="menu-item kingster-normal-menu"><a href="#">Teachers Login</a></li>
-                                    <li class="menu-item kingster-normal-menu"><a href="contact.html">Contact</a></li>
+                                    <li class="menu-item kingster-normal-menu"><a href="contact">Contact</a></li>
 
                                 </ul>
                                 <div class="kingster-navigation-slide-bar" id="kingster-navigation-slide-bar"></div>
@@ -104,7 +104,7 @@
                                                         <div class="tp-caption   tp-resizeme" id="slide-3-layer-1" data-x="38" data-y="center" data-voffset="-146" data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":10,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; white-space: nowrap; font-size: 33px; line-height: 33px; font-weight: 300; color: #ffffff; letter-spacing: 0px;font-family:Poppins;">Welcome to the offical website of</div>
                                                         <div class="tp-caption tp-shape tp-shapewrapper  tp-resizeme" id="slide-3-layer-4" data-x="33" data-y="center" data-voffset="-44" data-width="['830']" data-height="['118']" data-type="shape" data-responsive_offset="on" data-frames='[{"delay":330,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 6;background-color:rgba(0, 76, 199, 0.548);border-radius:3px 3px 3px 3px;"></div>
                                                         <div class="tp-caption   tp-resizeme" id="slide-3-layer-2" data-x="55" data-y="center" data-voffset="-52" data-width="['auto']" data-height="['auto']" data-type="text" data-responsive_offset="on" data-frames='[{"delay":360,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 7; white-space: nowrap; font-size: 68px; line-height: 88px; font-weight: 700; color: #ffffff; letter-spacing: 0px;font-family:Playfair Display;">Urji beri primary school</div>
-                                                        <a href="about.html"><div class="tp-caption rev-btn rev-hiddenicon " id="slide-3-layer-6" data-x="34" data-y="center" data-voffset="80" data-width="['auto']" data-height="['auto']" data-type="button" data-responsive_offset="on" data-frames='[{"delay":660,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(1,61,135);bg:rgba(255,255,255,1);bw:0 0 0 5px;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[19,19,19,19]" data-paddingright="[21,21,21,21]" data-paddingbottom="[19,19,19,19]" data-paddingleft="[21,21,21,21]" style="z-index: 9; white-space: nowrap; font-size: 17px; line-height: 16px; font-weight: 600; color: #2d2d2d; letter-spacing: 0px;font-family:Poppins;background-color:rgb(255,255,255);border-color:#0017e7b0;border-style:solid;border-width:0px 0px 0px 5px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">About Us</div></a>
+                                                        <a href="about"><div class="tp-caption rev-btn rev-hiddenicon " id="slide-3-layer-6" data-x="34" data-y="center" data-voffset="80" data-width="['auto']" data-height="['auto']" data-type="button" data-responsive_offset="on" data-frames='[{"delay":660,"speed":300,"frame":"0","from":"x:-50px;opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(1,61,135);bg:rgba(255,255,255,1);bw:0 0 0 5px;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[19,19,19,19]" data-paddingright="[21,21,21,21]" data-paddingbottom="[19,19,19,19]" data-paddingleft="[21,21,21,21]" style="z-index: 9; white-space: nowrap; font-size: 17px; line-height: 16px; font-weight: 600; color: #2d2d2d; letter-spacing: 0px;font-family:Poppins;background-color:rgb(255,255,255);border-color:#0017e7b0;border-style:solid;border-width:0px 0px 0px 5px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">About Us</div></a>
                                                     </li>
                                                 </ul>
                                                 <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -157,7 +157,7 @@
                                                 </div>
                                             </div>
                                             <div class="gdlr-core-pbf-element">
-                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="about.html" id="gdlr-core-button-id-66813"><span class="gdlr-core-content" >Read More</span><i class="gdlr-core-pos-right fa fa-long-arrow-right" id="i_1dd7_0"  ></i></a></div>
+                                                <div class="gdlr-core-button-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align"><a class="gdlr-core-button  gdlr-core-button-transparent gdlr-core-button-no-border" href="about" id="gdlr-core-button-id-66813"><span class="gdlr-core-content" >Read More</span><i class="gdlr-core-pos-right fa fa-long-arrow-right" id="i_1dd7_0"  ></i></a></div>
                                             </div>
                                         </div>
                                     </div>
@@ -299,7 +299,7 @@
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-title-item gdlr-core-item-pdb clearfix  gdlr-core-center-align gdlr-core-title-item-caption-bottom gdlr-core-item-pdlr" style="padding-bottom: 60px ;">
                                         <div class="gdlr-core-title-item-title-wrap clearfix">
-                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="text-transform: none ;">Our Gallery</h3></div><a href="gallery.html"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption">View More</span></a></div>
+                                            <h3 class="gdlr-core-title-item-title gdlr-core-skin-title " style="text-transform: none ;">Our Gallery</h3></div><a href="gallery"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption">View More</span></a></div>
                                 </div>
                                 <div class="gdlr-core-pbf-element">
                                     <div class="gdlr-core-gallery-item gdlr-core-item-pdb clearfix  gdlr-core-gallery-item-style-scroll gdlr-core-item-pdlr ">
@@ -416,9 +416,9 @@
                                 <div class="menu-our-campus-container">
                                     <ul id="menu-our-campus" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
                                         <li class="menu-item"><a href="#">Home</a></li>
-                                        <li class="menu-item"><a href="about.html">About us</a></li>
-                                        <li class="menu-item"><a href="contact.html">Contact Us</a></li>
-                                        <li class="menu-item"><a href="gallery.html">Our gallery</a></li>
+                                        <li class="menu-item"><a href="about">About us</a></li>
+                                        <li class="menu-item"><a href="contact">Contact Us</a></li>
+                                        <li class="menu-item"><a href="gallery">Our gallery</a></li>
 
                                     </ul>
                                 </div>
@@ -430,10 +430,10 @@
                                 <h3 class="kingster-widget-title">Navigations</h3><span class="clear"></span>
                                 <div class="menu-academics-container">
                                     <ul id="menu-academics" class="gdlr-core-custom-menu-widget gdlr-core-menu-style-plain">
-                                        <li class="menu-item"><a href="about.html">Our Mission</a></li>
-                                        <li class="menu-item"><a href="about.html">Our value</a></li>
-                                        <li class="menu-item"><a href="about.html">Our Vision</a></li>
-                                        <li class="menu-item"><a href="about.html">Director’s Welcome</a></li>
+                                        <li class="menu-item"><a href="about">Our Mission</a></li>
+                                        <li class="menu-item"><a href="about">Our value</a></li>
+                                        <li class="menu-item"><a href="about">Our Vision</a></li>
+                                        <li class="menu-item"><a href="about">Director’s Welcome</a></li>
                                     </ul>
                                 </div>
                             </div>
@@ -587,7 +587,7 @@
             errorMessage += "<br><br> To fix it you can:<br>&nbsp;&nbsp;&nbsp; 1. In the Slider Settings -> Troubleshooting set option:  <strong><b>Put JS Includes To Body</b></strong> option to true.";
             errorMessage += "<br>&nbsp;&nbsp;&nbsp; 2. Find the double jquery.js include and remove it.";
             errorMessage = "<span style='font-size:16px;color:#BC0C06;'>" + errorMessage + "</span>";
-            jQuery(sliderID).show().html(errorMessage);
+            jQuery(sliderID).show()(errorMessage);
         } /*]]>*/
     </script>
 
