--- a/contact.html
+++ b/contact.html
@@ -188,7 +188,7 @@
                                             <div class="gdlr-core-pbf-element">
                                                 <div class="gdlr-core-text-box-item gdlr-core-item-pdlr gdlr-core-item-pdb gdlr-core-left-align">
                                                     <div class="gdlr-core-text-box-item-content" style="font-size: 16px ;">
-                                                        <a href="index"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption">View More</span></a>                                                    </div>
+                                                        <a href="index"><span class="gdlr-core-title-item-caption gdlr-core-info-font gdlr-core-skin-caption">View on Google maps</span></a>                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
